# rag_book_recommendation_service

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 58fc1154d9e7_initial_schema.py  d2d414bf2028_generated_initial_schema.py
db/: __init__.py  engine.py
models/: __init__.py  base.py  book.py  category.py  interaction.py  models.py  preference.py  recommendation.py  user.py
schemas/: __init__.py  auth.py  base.py  book.py  interaction.py  recommendation.py  user.py
services/: base.py  book.py  category.py  interaction.py  user.py
utils/: config.py
utils/cache/: redis_client.py
utils/decorators/: ai.py  api.py  cache.py  db.py
utils/exceptions/: api.py  base.py  caching.py  db.py  processing.py  service.py
utils/logging/: __init__.py  ai.py  api.py  db.py
